@@ -10,20 +10,6 @@ class ReportView(SpreadsheetExportMixin, IndexView):
     template_name = "wagtailadmin/reports/base_report.html"
     title = ""
     paginate_by = 50
-    filterset_class = None
-
-    def filter_queryset(self, queryset):
-        # construct filter instance (self.filters) if not created already
-        if self.filterset_class and self.filters is None:
-            self.filters = self.filterset_class(
-                self.request.GET, queryset=queryset, request=self.request
-            )
-            queryset = self.filters.qs
-        elif self.filters:
-            # if filter object was created on a previous filter_queryset call, re-use it
-            queryset = self.filters.filter_queryset(queryset)
-
-        return self.filters, queryset
 
     def get_filtered_queryset(self):
         return self.filter_queryset(self.get_queryset())
@@ -33,7 +19,6 @@ class ReportView(SpreadsheetExportMixin, IndexView):
         return object_list
 
     def get(self, request, *args, **kwargs):
-        self.filters = None
         self.filters, self.object_list = self.get_filtered_queryset()
         self.is_export = self.request.GET.get("export") in self.FORMATS
         if self.is_export:
